# python-prompt-toolkit

./: .binstar.yml  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG  MANIFEST.in  Makefile  PROJECTS.rst  README.md  README.rst  appveyor.yml  cmdline.py  coverage.xml  mypy.ini  pyproject.toml  setup.cfg  setup.py  tests.py  tox.ini  typecheck.sh
.github/workflows/: quality.yaml  quality.yml  test.yaml  typecheck.yml
docs/: conf.py  index.rst  requirements.txt
docs/pages/: asking_for_a_choice.rst  asking_for_input.rst  building_prompts.rst  dialogs.rst  example.rst  full_screen_apps.rst  getting_started.rst  printing_text.rst  progress_bars.rst  reference.rst  related_projects.rst
examples/: auto-suggestion.py  autocompletion-like-readline.py  autocompletion-with-cursor-position.py  autocompletion.py  autocorrection.py  custom-key-binding.py  custom-token-list-control.py  custom-vi-operator-and-text-object.py  example.py  full-screen-layout.py  get-input.py  get-multiline-input.py  get-password-with-toggle-display-shortcut.py  gevent-get-input.py  gtk_eventloop.py  html-input.py  layout-test.py  pdb.py  regular-language.py  switch-between-vi-emacs.py  telnet.py  up-arrow-partial-string-matching.py
examples/choices/: color.py  default.py  frame-and-bottom-toolbar.py  gray-frame-on-accept.py  many-choices.py  mouse-support.py  simple-selection.py  with-frame.py
examples/dialogs/: button_dialog.py  checkbox_dialog.py  input_dialog.py  messagebox.py  password_dialog.py  progress_dialog.py  radio_dialog.py  styled_messagebox.py  yes_no_dialog.py
examples/full-screen/: ansi-art-and-textarea.py  buttons.py  calculator.py  dummy-app.py  full-screen-demo.py  full-screen-layout.py  hello-world-asyncio.py  hello-world.py  no-layout.py  pager.py  split-screen.py  test1.py  text-editor.py  yes-no-dialog.py
examples/input_selection/: color.py  many-options.py  simple-selection.py  with-frame.py
examples/logging/: colored_logs.py
examples/other/: coroutines-and-futures.py
examples/print-text/: ansi-colors.py  ansi.py  html.py  markdown-sample.md  named-colors.py  (+6 more)
prompt_toolkit/: __init__.py  application.py  auto_suggest.py  buffer.py  cache.py  code.py  completion.py  cursor_shapes.py  document.py  enums.py  history.py  inputstream.py  inputstream_handler.py  interface.py  keys.py  lazyasd.py  line.py  mouse_events.py  output.py  patch_stdout.py  prompt.py  render_context.py  renderer.py  search.py  search_state.py  selection.py  shortcuts.py  token.py  utils.py  validation.py  win32_types.py
pyline/: inputstream.py  inputstream_handler.py  line.py  prompt.py  renderer.py
recipe/: meta.yaml
tests/: contrib_tests.py  old_tests.py  pty_accessories.py  pty_repl.py  run_tests.py  style_tests.py  test_application.py  test_async_generator.py  test_buffer.py  test_cli.py  test_commonprefix_coverage.py  test_completion.py  test_contrib.py  test_document.py  test_filter.py  test_find_next_matching_line.py  test_find_prev_matching_line.py  test_formatted_text.py  test_history.py  test_inputstream.py  test_insert_last_word.py  test_insert_line_above.py  test_is_dimension_coverage.py  test_key_binding.py  test_kitty_keyboard.py  test_layout.py  test_llmsuggest.py  test_memory_leaks.py  test_merge_processors.py  test_mouse_scroll.py  test_print_formatted_text.py  test_pty_basic.py  test_pty_grapheme.py  test_radiolist.py  test_regular_languages.py  test_shortcuts.py  test_style.py  test_style_transformation.py  test_to_dimension.py  test_translate_row_col_to_index.py  (+6 more)
tools/: app_session_streamreader.py  debug_input_cross_platform.py  debug_vt100_input.py  debug_win_input.py
(+410 files in other folders)
